@@ -32,6 +32,7 @@ Changes since version 1.6-6
   * pwartest.formula (only formula interface): fixed: ellipsis (dots) were not passed on.
   * pwartest, pwfdtest: * statistics are labelled as F statistics.
                         * calculations now done without car::linearHypothesis().
+  * print.pseries: prettier printing for integers.
 
 
 Changes since version 1.6-5
